Changes from jTDS 1.1
=====================

07/11/2005 - Alin Sinpalean
 o Applied Mike's fix for bugs [1234531] Dates before 01/01/1900 broken due to
   DateTime value markers and [1235845] getTimestamp() returns illegal value
   after getString().

07/05/2005 - Alin Sinpalean
 o Applied Mike's fix for bug [1232733] setFetchSize(0) causes exception.
 o Final fix for bug [1229636] Memory Leak in Prepared Statements.

07/04/2005 - Alin Sinpalean
 o Corrected some build issues with Java 1.3.

07/01/2005 - Alin Sinpalean
 o Applied yet another patch for bug [1229636] Memory Leak in Prepared
   Statements, with a minor change. This seems to finally fix the caching and
   memory leaks; handles are always cached, even if maxStatements=0, retrieved
   from the connection cache and the statement list of handles is implemented
   by a Set, to make sure no memory leaks due to duplicates occur.

06/30/2005 - Alin Sinpalean
 o Corrected bug [1229636] Memory Leak in Prepared Statements, based on Mike's
   initial patch.
 o Realized that my initial fix will not work with maxStatements=0 (as opposed
   to Mike's) so made some more changes.
 o Corrected synchronization issue in ConnectionJDBC2.removeStatement() for the
   ConnectionJDBC2.statements instance variable.

06/29/2005 - Alin Sinpalean
 o Corrected a bug with prepare handles caching where the usage count was
   decremented twice when a statement was closed, causing premature release of
   handles.

06/28/2005 - Alin Sinpalean
 o Applied Mike's additional patch for bug [1222199] Delayed exception thrown
   in statement close. "Execution cancelled" exceptions are now only thrown if
   the cancel was caused by a call to Statement.cancel(); if a timeout is the
   cause, the exception is masked as an exception was already thrown when the
   execution timed out.
 o Corrected a memory leak caused by the prepared statement's handles
   collection being implemented through an ArrayList rather than a Set. The